--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
       <!-- PUT LOGO THINGY HERE -->
 
+      <img class="masthead-avatar mb-5" src="img/logo-4.png" alt="">
+
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Spill the Beans</h1>
