--- a/index.html
+++ b/index.html
@@ -646,8 +646,45 @@
                      var timeSelect = timeVal.split(':');
                      var inputHour = timeSelect[0]
                      var inputMinute = timeSelect[1];
-                     var first = inputHour - 
-                     document.getElementById("sleep_time").innerHTML = "Your probably won't notice any significant disruption in your sleep";
+                     var first = inputHour - 9;
+                     var secondHour = inputHour - 7;
+                     var secondMin = inputMinute - 30;
+                     var last = inputHour - 6;
+                     var fAMPM = "PM";
+                     var sAMPM = "PM";
+                     var lAMPM = "PM";
+                     if (first < 0) {
+                      first = 12 + first;
+                     }
+                     else {
+                      fAMPM = "AM";
+                     }
+                     if (secondMin < 0) {
+                      --secondHour;
+                      secondMin = 60 + secondMin;
+                     }
+                     if (secondHour < 0) {
+                      secondHour = 12 + secondHour;
+                     }
+                     else {
+                      sAMPM = "AM";
+                     }
+                     if (last < 0) {
+                      last = 12 - last;
+                     }
+                     else {
+                      lAMPM = "AM";
+                     }
+                     if (first == 0) {
+                      first = 12;
+                     }
+                     else if (secondHour == 0) {
+                      secondHour = 12;
+                     }
+                     else if (last == 0) {
+                      last = 12;
+                     }
+                     document.getElementById("bed_time").innerHTML = "Your ideal bedtimes are " + first + ":" + inputMinute + fAMPM + " or " + secondHour + ":" + secondMin + sAMPM + " or " + last + ":" + inputMinute + lAMPM +".";
                      
                    }
                  </script>
