everything works I think

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                        var inputMinute = timeSelect[1];
                        var currHour = d.getHours();
                        var currMin = d.getMinutes();
-                       var diffHours = inputHour - currHour + ((currMin - inputMinute) / 60);
+                       var diffHours = currHour - inputHour + ((currMin - inputMinute) / 60);
                        document.getElementById("half_life").innerHTML = "You have  " + mgVal * (Math.pow(0.89, diffHours)) + " mg of caffeine left in your body";
                      }
                    </script>
@@ -554,7 +554,7 @@
                       <p class="help-block text-danger"></p>
                     </div>
                   </div>
-                  <br> 
+                  <br>
                   <p id="sleep_time"></p>
                   <div id="success"></div>
                   <div class="form-group">
@@ -685,7 +685,7 @@
                       last = 12;
                      }
                      document.getElementById("bed_time").innerHTML = "Your ideal bedtimes are " + first + ":" + inputMinute + fAMPM + " or " + secondHour + ":" + secondMin + sAMPM + " or " + last + ":" + inputMinute + lAMPM + ".";
-                     
+
                    }
                  </script>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -732,16 +732,24 @@
                   <div class="control-group">
                     <div class="form-group floating-label-form-group controls mb-0 pb-2">
                       <label>Mg</label>
-                      <input class="form-control" id="mg" type="number" placeholder="Mg" required="required" data-validation-required-message="Please enter how many mg you've consumed.">
+                      <input class="form-control" id="mg3" type="number" placeholder="Mg" required="required" data-validation-required-message="Please enter how many mg you've consumed.">
                       <p class="help-block text-danger"></p>
                     </div>
                   </div>
                   <br>
+                  <p id="calorie_result"></p>
                   <div id="success"></div>
                   <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-l" id="sendMessageButton">Calculate Calories</button>
+                    <input type="button" onclick="calculateCalories()" value="Calculate Calories">
                   </div>
-                </form>
+                  <script>
+                    function calculateCalories() {
+                     var nameValue = document.getElementById("mg3").value;
+                     var calories = nameValue * 0.007716;
+                     var rounded = calories.toFixed(3);
+                     document.getElementById("calorie_result").innerHTML = "You are consuming " + rounded + " calories.";
+                   }
+                 </script>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
