--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Theme -->
   <link href="css/freelancer.min.css" rel="stylesheet">
+  <link rel="icon" href="img/favicon.ico">
 
 </head>
 
@@ -36,6 +37,12 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#calculator">Calculator</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#funfacts">Fun Facts</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#faq">FAQ</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
@@ -50,7 +57,7 @@
   <header class="masthead bg-primary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
 
-      <!-- PUT LOGO THINGY HERE -->
+      <img class="masthead-avatar mb-5" src="img/logo.png" alt="">
 
 
       <!-- Masthead Heading -->
@@ -167,6 +174,82 @@
 
       </div>
       <!-- /.row -->
+
+    </div>
+  </section>
+
+  <!-- Fun Facts Section -->
+  <section class="page-section bg-primary text-white mb-0" id="funfacts">
+    <div class="container">
+
+      <!-- Fun Facts Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-white">Fun Facts</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom divider-light">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-coffee"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- Fun Facts Section Content -->
+      <div>
+        <center><font size="4">
+            60% of Americans say that they need coffee at the beginning of their day<br>
+            10 grams of caffeine is considered a lethal dose<br>
+            90% of Americans ingest caffeine every day<br>
+            There is more caffeine in lightly roasted coffee than darkly roasted coffee<br>
+            It takes 20 minutes after the caffeine has reached your stomach for you to start feeling the effects<br>
+            Caffeine can increase athletic ability by 3% by increasing calcium flow into your muscles<br>
+            Coffee has three times the amount of caffeine as tea<br>
+            Women metabolize caffeine faster than men by about 25%<br>
+            There are about 60 different plants used to produce caffeine<br>
+            The most popular words worldwide that are found in almost every language are coffee, tea, cacao, and kola
+        </center></font>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FAQ Section -->
+  <section class="page-section" id="faq">
+    <div class="container">
+
+      <!-- FAQ Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">FAQ</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-coffee"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- FAQ Section Content -->
+      <div class="row">
+        <ul><font size="4" color="#56382B">
+          <li>How do I know I am addicted to caffeine?</li>
+          To diagnose caffeine addiction, look for symptoms like difficulty sleeping, restlessness, nervousness, muscle twitching, increased heart rate, or stomach upset.<br><br>
+          <li>When are good times to drink coffee throughout the day?</li>
+          Our biological clocks control a hormone in our bodies called cortisol, which makes us feel more awake. Since our biological clocks and cortisol production are mostly controlled by sunlight, the optimal time to drink coffee is around the same for everyone. So, optimal times for caffeine intake are between 9:30-11:30 a.m. and 1:30-5:30 p.m.<br><br>
+          <li>What happens if we consume caffeine during times that our cortisol production is high? </li>
+          Two things will happen. The effects of the caffeine will be lessened, and our bodies will gain a high tolerance to caffeine.<br><br>
+          <li>Can caffeine addiction lead to more severe disorders?</li>
+          Caffeine can induce other disorders like caffeine-induced anxiety disorder and caffeine-induced sleep disorder.<br><br>
+          <li>How long does caffeine stay in the body?</li>
+          Caffeine reaches its peak level in the bloodstream in about 30 minutes to an hour. Then the body will get rid of roughly 50% of the caffeine in 3 to 5 hours and the rest can stay in the body for 8 to 14 hours.<br><br>
+          <li>Are energy drinks a good substitute for coffee?</li>
+          Energy drinks contain significantly less caffeine than a single cup of coffee and instead have lots more sugar and chemicals. So, energy drinks will simply provide more sugar and empty calories for a smaller energy boost.<br><br>
+          <li>Can caffeine have positive effects on you?</li>
+          If taken in the right amounts and at the proper times, caffeine can increase sharpness and concentration, and it has even been shown to increase lifespan.<br><br>
+          <li>Is it a good idea to drink coffee right before a nap?</li>
+          Drinking a cup of coffee right before a short 15 minute nap will increase focus and concentration.
+        </ul></font>
+      </div>
 
     </div>
   </section>
