fixed button style

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <p id="intake_result"></p>
                         <div id="success"></div>
                         <div class="form-group">
-                          <input type="button" onclick="calculateSafeLimit()" value="Calculate Safe Limit">
+                          <input type="button" class="btn btn-primary" onclick="calculateSafeLimit()" value="Calculate Safe Limit">
                         </div>
                         <script>
                           function calculateSafeLimit() {
@@ -495,7 +495,7 @@
                       <p id="water_result"></p>
                       <div id="success"></div>
                       <div class="form-group">
-                        <input type="button" onclick="calculateWaterIntake()" value="Calculate Ideal Hydration">
+                        <input type="button" class="btn btn-primary" onclick="calculateWaterIntake()" value="Calculate Ideal Hydration">
                       </div>
                       <script>
                         function calculateWaterIntake() {
@@ -562,7 +562,7 @@
                     <p id="half_life"></p>
                     <div id="success"></div>
                     <div class="form-group">
-                      <input type="button" onclick="calculateHalfLife()" value="Calculate How Much Caffeine You Have left">
+                      <input type="button" class="btn btn-primary" onclick="calculateHalfLife()" value="Calculate How Much Caffeine You Have left">
                     </div>
                     <script>
                       function calculateHalfLife() {
@@ -643,7 +643,7 @@
                   <p id="sleep_time"></p>
                   <div id="success"></div>
                   <div class="form-group">
-                    <input type="button" onclick="calculateSleepTime()" value="Calculate Amount of Sleep Disruption">
+                    <input type="button" class="btn btn-primary" onclick="calculateSleepTime()" value="Calculate Amount of Sleep Disruption">
                   </div>
                   <script>
                     function calculateSleepTime() {
@@ -723,7 +723,7 @@
                   <p id="bed_time"></p>
                   <div id="success"></div>
                   <div class="form-group">
-                    <input type="button" onclick="calculateBedTime()" value="Calculate Ideal Bed Time">
+                    <input type="button" class="btn btn-primary" onclick="calculateBedTime()" value="Calculate Ideal Bed Time">
                   </div>
                   <script>
                     function calculateBedTime() {
@@ -828,7 +828,7 @@
                   <p id="calorie_result"></p>
                   <div id="success"></div>
                   <div class="form-group">
-                    <input type="button" onclick="calculateCalories()" value="Calculate Calories">
+                    <input type="button" class="btn btn-primary" onclick="calculateCalories()" value="Calculate Calories">
                   </div>
                   <script>
                     function calculateCalories() {
